@@ -27,7 +27,6 @@
 
 char *stripdir(char * dir, char *buf, int maxlen);
 int checkpath(const char *wanted_path, char *path, wzd_context_t *context);
-int checkabspath(const char *wanted_path, char *path, wzd_context_t *context);
 int checkpath_new(const char *wanted_path, char *path, wzd_context_t *context);
 int test_path(const char *trial_path, wzd_context_t *context);
 
